<resources>
    <string name="productcat_sdk_app_name">ProductCat</string>
    <string name="productcat_sdk_preference_file">productcat_pref_file</string>

    <string name="productcat_sdk_policy_title">Welcome</string>
    <string name="productcat_sdk_policy">Before you begin, please review and acknowledge the <a href="https://shopping.visenze.com/privacy-policy?uid=0000">Privacy policy</a> and <a href="https://shopping.visenze.com/terms-of-use?uid=0000">Terms of use</a> on how we collect and use your personal information.</string>
    <string name="productcat_sdk_recommend">I agree to receive recommended discounts and products based on my search preferences</string>
    <string name="productcat_sdk_privacy_policy">Privacy policy</string>
    <string name="productcat_sdk_terms_of_use">Terms of use</string>
    <string name="productcat_sdk_weblink_policy">https://shopping.visenze.com/privacy-policy</string>
    <string name="productcat_sdk_weblink_terms_of_use">https://shopping.visenze.com/terms-of-use</string>
    <string name="productcat_sdk_accept">Accept</string>
    <string name="productcat_sdk_decline">Decline</string>

    <string name="productcat_sdk_product_recommendation_title">Product recommendation</string>
    <string name="productcat_sdk_product_recommendation_content">We will recommend discounts and promotional products based on your search preferences. \n\nDo you agree to proceed?</string>
    <string name="productcat_sdk_agree">Yes, I agree</string>
    <string name="productcat_sdk_no">No</string>

</resources>
